# felixs-tools

./: .gitignore  README.md  pyproject.toml
cli/: README.md  pyproject.toml
cli/src/felixs_cli/: main.py
docs/: friction.md  sourceoftruth.md
