[project]
name = "felixs-cli"
version = "0.1.0"
description = "flx CLI entrypoint for Felix's Tools"
requires-python = ">=3.12"
dependencies = [
    "felixs-common",
    "felixs-logger",
    "typer>=0.12",
]

[project.scripts]
flx = "felixs_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/felixs_cli"]

[tool.uv.sources]
felixs-common = { workspace = true }
felixs-logger = { workspace = true }
