[project]
name = "felixs-cli"
version = "0.1.0"
description = "felix CLI entrypoint for Felix's Tools"
requires-python = ">=3.12"
dependencies = [
    "common",
    "logger",
    "typer>=0.12",
]

[project.scripts]
felix = "felixs_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/felixs_cli"]

[tool.uv.sources]
common = { workspace = true }
logger = { workspace = true }
